--- a/Linear Discriminant Analysis(LDA)-Thyroid_Data.ipynb
+++ b/Linear Discriminant Analysis(LDA)-Thyroid_Data.ipynb
@@ -529,7 +529,82 @@
    "id": "50c87ad2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lda_mdl=LinearDiscriminantAnalysis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "454ec024",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lda_pip=Pipeline([(\"outlier_remove\",outliers_removing([\"Age\"]))\n",
+    "                ,(\"Data_preProccessing\",pre_process),\n",
+    "                  (\"Model\",lda_mdl)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9dfe5bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lda_pip.fit(train_x,train_y_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "895dbc16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_y_pred=lda_pip.predict(train_x)\n",
+    "test_y_pred=lda_pip.predict(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62cdc62b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Calculate performance metrics for training set\n",
+    "train_accuracy = accuracy_score(train_y_scaled, train_y_pred)\n",
+    "train_precision = precision_score(train_y_scaled, train_y_pred)\n",
+    "train_recall = recall_score(train_y_scaled, train_y_pred)\n",
+    "train_f1 = f1_score(train_y_scaled, train_y_pred)\n",
+    "\n",
+    "# Calculate performance metrics for test set\n",
+    "test_accuracy = accuracy_score(test_y_scaled, test_y_pred)\n",
+    "test_precision = precision_score(test_y_scaled, test_y_pred)\n",
+    "test_recall = recall_score(test_y_scaled, test_y_pred)\n",
+    "test_f1 = f1_score(test_y_scaled, test_y_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f216d342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print performance metrics\n",
+    "print(f\"Training Accuracy: {train_accuracy:.2f}\")\n",
+    "print(f\"Training Precision: {train_precision:.2f}\")\n",
+    "print(f\"Training Recall: {train_recall:.2f}\")\n",
+    "print(f\"Training F1-Score: {train_f1:.2f}\")\n",
+    "print()\n",
+    "print(f\"Test Accuracy: {test_accuracy:.2f}\")\n",
+    "print(f\"Test Precision: {test_precision:.2f}\")\n",
+    "print(f\"Test Recall: {test_recall:.2f}\")\n",
+    "print(f\"Test F1-Score: {test_f1:.2f}\")\n"
+   ]
   }
  ],
  "metadata": {
