--- a/SVM(rbf)-Thyroid_Data.ipynb
+++ b/SVM(rbf)-Thyroid_Data.ipynb
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f1ad1406",
    "metadata": {},
    "outputs": [
@@ -1843,7 +1843,8 @@
     "print(f\"Test Accuracy: {test_accuracy:.2f}\")\n",
     "print(f\"Test Precision: {test_precision:.2f}\")\n",
     "print(f\"Test Recall: {test_recall:.2f}\")\n",
-    "print(f\"Test F1-Score: {test_f1:.2f}\")\n"
+    "print(f\"Test F1-Score: {test_f1:.2f}\")\n",
+    "\n"
    ]
   }
  ],
