--- a/SVM(poly)-Thyroid_Data.ipynb
+++ b/SVM(poly)-Thyroid_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f702acd7",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "acaa5ad1",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "36abfb50",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "36ea0bd3",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a9c067be",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cd09ac62",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "92b32b77",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "178e3960",
    "metadata": {},
    "outputs": [],
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8dc518cb",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3f760080",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "caea156a",
    "metadata": {},
    "outputs": [],
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "65dffce6",
    "metadata": {},
    "outputs": [],
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "88a3ae11",
    "metadata": {},
    "outputs": [],
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2f354c24",
    "metadata": {},
    "outputs": [],
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "af2a1174",
    "metadata": {},
    "outputs": [],
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "50c87ad2",
    "metadata": {},
    "outputs": [],
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "39c6cb41",
    "metadata": {},
    "outputs": [],
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d691a5ed",
    "metadata": {},
    "outputs": [
@@ -1781,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a59553e0",
    "metadata": {},
    "outputs": [],
@@ -1792,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "cce34010",
    "metadata": {},
    "outputs": [],
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "d77e0de8",
    "metadata": {},
    "outputs": [
@@ -1845,11 +1845,33 @@
     "print(f\"Test Recall: {test_recall:.2f}\")\n",
     "print(f\"Test F1-Score: {test_f1:.2f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcd22e35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm=confusion_matrix(train_y_scaled,train_y_pred)\n",
+    "ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=le.classes_).plot(cmap=plt.cm.Blues, values_format='d')\n",
+    "plt.title('Train Confusion Matrix')\n",
+    "plt.xlabel('Predicted label')\n",
+    "plt.ylabel('True label')\n",
+    "plt.show()\n",
+    "\n",
+    "cm=confusion_matrix(test_y_scaled,test_y_pred)\n",
+    "ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=le.classes_).plot(cmap=plt.cm.Blues, values_format='d')\n",
+    "plt.title('Test Confusion Matrix')\n",
+    "plt.xlabel('Predicted label')\n",
+    "plt.ylabel('True label')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
