--- a/SVM(rbf)-Thyroid_Data.ipynb
+++ b/SVM(rbf)-Thyroid_Data.ipynb
@@ -1846,6 +1846,28 @@
     "print(f\"Test F1-Score: {test_f1:.2f}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52f221a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm=confusion_matrix(train_y_scaled,train_y_pred)\n",
+    "ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=le.classes_).plot(cmap=plt.cm.Blues, values_format='d')\n",
+    "plt.title('Train Confusion Matrix')\n",
+    "plt.xlabel('Predicted label')\n",
+    "plt.ylabel('True label')\n",
+    "plt.show()\n",
+    "\n",
+    "cm=confusion_matrix(test_y_scaled,test_y_pred)\n",
+    "ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=le.classes_).plot(cmap=plt.cm.Blues, values_format='d')\n",
+    "plt.title('Test Confusion Matrix')\n",
+    "plt.xlabel('Predicted label')\n",
+    "plt.ylabel('True label')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
