--- a/SVM(sigmoid)-Thyroid_Data.ipynb
+++ b/SVM(sigmoid)-Thyroid_Data.ipynb
@@ -1845,11 +1845,33 @@
     "print(f\"Test Recall: {test_recall:.2f}\")\n",
     "print(f\"Test F1-Score: {test_f1:.2f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d89bf1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm=confusion_matrix(train_y_scaled,train_y_pred)\n",
+    "ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=le.classes_).plot(cmap=plt.cm.Blues, values_format='d')\n",
+    "plt.title('Train Confusion Matrix')\n",
+    "plt.xlabel('Predicted label')\n",
+    "plt.ylabel('True label')\n",
+    "plt.show()\n",
+    "\n",
+    "cm=confusion_matrix(test_y_scaled,test_y_pred)\n",
+    "ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=le.classes_).plot(cmap=plt.cm.Blues, values_format='d')\n",
+    "plt.title('Test Confusion Matrix')\n",
+    "plt.xlabel('Predicted label')\n",
+    "plt.ylabel('True label')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
